# ai-skills

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  security_best_practices_report.md
.agents/plugins/: marketplace.json
.analysis/: AI_CONTEXT.md  RESUME.md
.analysis/outputs/: SUMMARY.json  architecture.md  clone-coding.md  dependency-graph.json  glossary.md  implementation-checklist.md  issue-candidates.md  module-map.json  overview.md  technologies.md  tutorial.md
.analysis/outputs/modules/: github-flow.md  implement.md  plan.md  plugin.md  refactor.md  reference-templates.md  release-docs.md  review.md  scripts.md  skill-generator.md  source-analyzer.md  tests.md
.claude-plugin/: marketplace.json
.codex/skills/skill-generator/: README.md  SKILL.md
claude-code/plugin/: .mcp.json
claude-code/plugin/.claude-plugin/: plugin.json
claude-code/plugin/references/: github-flow-checklist.md  overhaul-template.md  refactor-template.md  refactoring-checklist.md  refactoring-patterns.md  review-checklist.md  tidy-first-rules.md  tutorial-template.md
claude-code/plugin/servers/source-analyzer-mcp/: pyproject.toml
codex/skills/implement/: SKILL.md  (+1 more)
plugins/source-analyzer-tools/: .mcp.json  README.md
scripts/: install_claude_code_skill.sh  install_codex_skill.sh  publish_wiki.sh  sync_source_analyzer_mcp.sh
servers/source-analyzer-mcp/: server.py  source_analyzer_search.py
tests/: test_checkpoint_manager.py  test_codex_mcp_install.py  test_publish_wiki.py  test_release_contract.py  test_skill_repository_contract.py  test_source_analyzer_search.py
(+94 files in other folders)
